# BillyCompanion

./: .env.example  .gitignore  900-create_db.sh  Dockerfile  books.json  docker-compose.yml  manage.py  pyproject.toml  run-app.sh  run_logged_gunicorn_app.py  supervisord.conf
billy/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
billy/migrations/: 0001_initial.py  0002_item_created_by.py
billy_project/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
billy_project/settings/: base.py  development.py
books/: admin.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_book_title.py  0002_chapter_success.py  0003_remove_success_book.py
core/: loggers.py
frontend/: base.html  index.html
user/management/commands/: createsu.py
user/migrations/: 0001_initial.py
